deploy/kubernetes/resources/ingress/rideshare-ingress.yml
---
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ride-share-ingress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /api/user.*
        backend:
          serviceName: user-service
          servicePort: 9000
